--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -15,8 +15,8 @@
 \usepackage{amsmath,amssymb}
 \usepackage{booktabs}
 \usepackage{caption}
-% \usepackage{fourier}
-\usepackage[bitstream-charter]{mathdesign}
+% \usepackage[bitstream-charter]{mathdesign}
+\usepackage{fourier}
 \usepackage[nodayofweek]{datetime}
 \usepackage{environ}
 \usepackage{float}
