--- a/stat-cookbook.tex
+++ b/stat-cookbook.tex
@@ -16,7 +16,7 @@
 \usepackage{booktabs}
 \usepackage{caption}
 % \usepackage[bitstream-charter]{mathdesign}
-\usepackage{fourier}
+% \usepackage{fourier}
 \usepackage[nodayofweek]{datetime}
 \usepackage{environ}
 \usepackage{float}
